style(timeline): fix the polka dots are truncated

--- a/src/ABConverter/style/styles.scss
+++ b/src/ABConverter/style/styles.scss
@@ -431,6 +431,7 @@ html[data-theme="dark"] #app {
       color: var(--ab-bright-color);
 
       position: relative;
+      overflow: visible;
       &::after {
         position: absolute;
         top: 1em;
